# scriptos-ui/src/app/openapi/model/loginResponse.ts
@@ -1,0 +1,17 @@
+/**
+ * Scriptos API
+ * The API Specification for the Scriptos Backend
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface LoginResponse { 
+    token: string;
+    username: string;
+}
+
